# BMP

./: .gitignore  CMakeLists.txt  README.md  build.sh  main
include/: bmp.h  header.h  linuxTool.h  my_math.h
include/example/: bmp2.h
src/: bmp.cpp  linuxTool.cpp  main.cpp  my_math.cpp
src/example/: bmp2.cpp  main2.cpp
